start github auth
