# internal/api/modules/user/services/user.service.go
@@ -334,157 +334,6 @@ func LoginGoogle(c *gin.Context, googleToken string) (types.ResponseSession, err
 	}, nil
 }
 
-// LoginTwitter is the function to help user login via Twitter service and return the tokens
-func LoginTwitter(c *gin.Context, username, email, image, profileBackgroundImage, profileBackgroundColor, twitterId string) (types.ResponseSession, error) {
-	db := mysql.DB
-
-	// Get necessary values from cookie
-	sessionID := utils.GetHttpOnlyCookieForSession(c)
-	meta, err := utils.GetSessionMetadata(c)
-	if err != nil {
-		utils.SendErrorResponse(c, http.StatusBadRequest, "Failed to get session metadata", err)
-	}
-	// Query for new user role
-	userRoleID, err := roles.GetRoleID("user")
-	if err != nil {
-		return types.ResponseSession{}, fmt.Errorf("failed to get user role ID: %w", err)
-	}
-
-	// Check if the user exists by email
-	var existingUser Users.User
-	if err := db.Where("email = ?", email).First(&existingUser).Error; err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			// If user doesn't exist, create a new user
-			newUser := Users.User{
-				TwitterID: twitterId,
-				Username:  username,
-				Email:     email,
-				RoleID:    userRoleID,
-			}
-			if err := db.Create(&newUser).Error; err != nil {
-				return types.ResponseSession{}, fmt.Errorf("failed to create user: %v", err)
-			}
-
-			// Create a profile for the new user
-			newProfile := Profiles.Profile{
-				UserID:          newUser.ID,
-				ProfilePic:      image,
-				CoverPhoto:      profileBackgroundImage,
-				BackgroundColor: profileBackgroundColor,
-				Birthday:        nil,
-			}
-			if err := db.Create(&newProfile).Error; err != nil {
-				return types.ResponseSession{}, fmt.Errorf("failed to create profile: %v", err)
-			}
-
-			existingUser = newUser // Assign the newly created user to `existingUser`
-		} else {
-			// Other errors while querying the mysql
-			return types.ResponseSession{}, fmt.Errorf("failed to query user: %v", err)
-		}
-	} else {
-		// User exists, update Twitter ID if missing
-		if existingUser.TwitterID == "" {
-			existingUser.TwitterID = twitterId
-		}
-
-		// Update the user's profile fields if they are missing or need updating
-		var existingProfile Profiles.Profile
-		if err := db.Where("user_id = ?", existingUser.ID).First(&existingProfile).Error; err != nil {
-			if errors.Is(err, gorm.ErrRecordNotFound) {
-				// Create a new profile if none exists
-				newProfile := Profiles.Profile{
-					UserID:          existingUser.ID,
-					ProfilePic:      image,
-					CoverPhoto:      profileBackgroundImage,
-					BackgroundColor: profileBackgroundColor,
-					Birthday:        nil,
-				}
-				if err := db.Create(&newProfile).Error; err != nil {
-					return types.ResponseSession{}, fmt.Errorf("failed to create profile: %v", err)
-				}
-			} else {
-				// Other errors while querying the profile
-				return types.ResponseSession{}, fmt.Errorf("failed to query profile: %v", err)
-			}
-		} else {
-			// Update existing profile fields if they are missing or outdated
-			if existingProfile.ProfilePic == "" && image != "" {
-				existingProfile.ProfilePic = image
-			}
-			if existingProfile.CoverPhoto == "" && profileBackgroundImage != "" {
-				existingProfile.CoverPhoto = profileBackgroundImage
-				existingProfile.BackgroundColor = profileBackgroundColor
-			}
-			if err := db.Save(&existingProfile).Error; err != nil {
-				return types.ResponseSession{}, fmt.Errorf("failed to update profile: %v", err)
-			}
-		}
-
-		userID := utils.GetHttpOnlyCookieForUser(c, existingUser.ID.String())
-
-		var user Users.User
-
-		// Have session ID
-		if sessionID != "" && userID != "" {
-			response, status, err := LoginBySessionID(sessionID, user, meta)
-			if err != nil {
-				utils.SendErrorResponse(c, status, "Failed to login", err)
-				return types.ResponseSession{}, err
-			}
-
-			return types.ResponseSession{
-				SessionID:    response.SessionID,
-				AccessToken:  response.AccessToken,
-				RefreshToken: response.RefreshToken,
-				UserID:       response.UserID,
-			}, nil
-		}
-	}
-
-	// Clean up old tokens
-	err = DeleteAllTokensByUserID(existingUser.ID)
-	if err != nil {
-		return types.ResponseSession{}, fmt.Errorf("failed to delete tokens: %w", err)
-	}
-
-	// Generate new tokens
-	accessToken, refreshToken, err := refresh_token.GenerateHexTokens(existingUser.ID)
-	if err != nil {
-		return types.ResponseSession{}, fmt.Errorf("failed to generate tokens: %w", err)
-	}
-	var rID uuid.UUID
-	if err := db.Model(&RefreshTokens.RefreshToken{}).
-		Select("id").
-		Where("token = ?", refreshToken).
-		Scan(&rID).Error; err != nil {
-		return types.ResponseSession{}, fmt.Errorf("failed to find refresh token: %v", err)
-	}
-	// Create new session record
-	if sessionID == "" {
-		// Init new session record
-		sID, err := queries.InsertNewSessionByUserID(existingUser.ID, rID, meta)
-		if err != nil {
-			return types.ResponseSession{}, fmt.Errorf("failed to insert new session: %v", err)
-		}
-		sessionID = sID.String()
-	}
-
-	// Session exists
-	err = queries.InsertIntoSessionByValidSession(utils.ConvertStringToUuid(sessionID), existingUser.ID, rID, meta)
-	if err != nil {
-		return types.ResponseSession{}, fmt.Errorf("failed to insert new session: %v", err)
-	}
-	sID, err := utils.SetSessionToRedisByUserID(c, db, existingUser)
-	// Return the tokens and user info
-	return types.ResponseSession{
-		AccessToken:  accessToken,
-		RefreshToken: refreshToken,
-		SessionID:    sID,
-		UserID:       existingUser.ID,
-	}, nil
-}
-
 func LoginBySessionID(sessionID string, user Users.User, meta types.SessionMetadata) (types.ResponseSession, int, error) {
 	db := mysql.DB
 
